--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf8">
     <link rel="stulesheet" href="styles.css">
-    <title> </title>
+    <title>Cat</title>
   </head>
   <body>
-    <h1>  </h1>
+    <h1> cat </h1>
     
     
   </body>
