--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf8">
-    <link rel="stulesheet" href="styles.css">
+    <link href="styles.css" rel="stulesheet">
     <title>Cat</title>
   </head>
   <body>
-    <h1> cat </h1>
+    <h1>кот</h1>
     
     
   </body>
